Lecturer Revision or Feedback

--- a/MVC vs MVP/conference_101719.tex
+++ b/MVC vs MVP/conference_101719.tex
@@ -48,6 +48,7 @@ brandon.josua@student.pradita.ac.id}
 \maketitle
 
 \begin{abstract}
+\textbf{\textcolor{red}{make the abstract into 1 paragraph}}
 The choice of architectural patterns significantly influences the performance and memory efficiency of software systems. In this paper, we present a comprehensive comparative analysis between two widely used architectural patterns: Model-View-Controller (MVC) and Model-View-Presenter (MVP). Our study aims to provide insights into which architectural pattern is superior concerning speed and memory usage, crucial factors in determining the scalability and responsiveness of modern applications.
 
 To conduct a fair evaluation, we implemented identical applications using both MVC and MVP architectures. We developed benchmarks to measure the speed of execution and memory footprint of each pattern under various scenarios, including different input sizes and complexities. 
@@ -58,6 +59,8 @@ Furthermore, we discuss the implications of these findings on software developme
 \end{abstract}
 
 \section{Introduction}
+
+\textbf{\textcolor{red}{Introduction is too short, add one or more paragraf such as how MVP or MVC has been created and who created it, the origin of MVP or MVC, example of use the MVC or MVP which is lined with the introduction	}}
 Software development has undergone a significantly significant evolution in recent decades, with the emergence of various design patterns to build more structured and maintainable applications. 
 
 In software development, Model View Controller (MVC) and Model View Presenter (MVP) are two frequently debated design patterns. MVC, which emerged in the 1970s, organizes applications into Model (data), View (presentation), and Controller (logic) components. On the other hand, MVP is a variation of MVC that emerged in the early 2000s, introducing the Presenter as an intermediary between the Model and View to separate presentation logic from business logic. Comparing these two patterns is crucial for a better understanding of their strengths, weaknesses, and suitable applications in software development.
